--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "RIGHT Discord Bot is a bot which has every features of MEE6, but fully free and open-source.",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "node --loader ts-node/esm src/index.js",
     "build": "tsc && node builds/index.js"
@@ -28,6 +29,7 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.13.0",
     "discord.js": "^14.6.0",
+    "dotenv": "^16.0.3",
     "erlpack": "^0.1.4",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
@@ -35,6 +37,7 @@
     "tsc": "^2.0.4"
   },
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
