--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "@discordjs/builders": "^1.3.0",
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.13.0",
+    "@types/nodemailer": "^6.4.6",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "erlpack": "^0.1.4",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "sqlite": "^4.1.2",
-    "tsc": "^2.0.4"
+    "util": "^0.12.5"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
